impl subject and related subject population script
